--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon src/index.js",
-        "start": "npm run start"
+        "start": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "Ravi Kant Pujari",
