--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
     "builds": [
         {
             "src": "./src/index.js",
-            "use": "@vercel/node"
+            "use": "@now/node"
         }
     ],
     "routes": [
         {
-            "src": "/src/(.*)",
-            "dest": "/api/v1/movies/all"
+            "src": "/(.*)",
+            "dest": "src/index.js"
         }
     ]
 }
